# docs/swagger.yaml
@@ -772,6 +772,32 @@ paths:
       summary: Обновление профиля
       tags:
       - users
+    delete:
+      consumes:
+      - application/json
+      description: Удаляет текущий аккаунт и связанные пользовательские данные
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "401":
+          description: AUTH_REQUIRED, INVALID_TOKEN
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+        "404":
+          description: USER_NOT_FOUND
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Удаление аккаунта
+      tags:
+      - users
   /users/me/password/change/confirm:
     post:
       consumes:
